version/0.18/_sources/api/solver/_autosummary/settings/p_v_coupling.rst.txt
:orphan:

.. _p_v_coupling:

p_v_coupling
============

.. autoclass:: ansys.fluent.core.solver.settings_232.p_v_coupling.p_v_coupling
    :show-inheritance:

.. rubric:: Attributes

====================================   =====================================================

Attribute                                                                            Summary

====================================   =====================================================
:ref:`flow_scheme <flow_scheme>`                                        'flow_scheme' child.

:ref:`coupled_form <coupled_form>`                                     'coupled_form' child.

:ref:`solve_n_phase <solve_n_phase>`       Enable/disable N-Phase Volume Fraction equations.

====================================   =====================================================

.. rubric:: Included in:

========================   ====================

Parent                                  Summary

========================   ====================
:ref:`methods <methods>`       'methods' child.

========================   ====================

