version/0.23/_sources/api/solver/_autosummary/settings/p_v_coupling.rst.txt
:orphan:

.. _p_v_coupling:

p_v_coupling
============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.p_v_coupling.p_v_coupling
    :show-inheritance:

.. rubric:: Attributes

====================================================================   =====================================================

Attribute                                                                                                            Summary

====================================================================   =====================================================
:ref:`flow_scheme <flow_scheme>`                                                                        'flow_scheme' child.

:ref:`skewness_correction_itr_count <skewness_correction_itr_count>`                 Set iterations for skewness correction.

:ref:`neighbor_correction_itr_count <neighbor_correction_itr_count>`                 Set iterations for neighbor correction.

:ref:`skewness_neighbor_coupling <skewness_neighbor_coupling>`                              Set Skewness-Neighbor Coupling?.

:ref:`coupled_form <coupled_form>`                                                                     'coupled_form' child.

:ref:`solve_n_phase <solve_n_phase>`                                       Enable/disable N-Phase volume fraction equations.

====================================================================   =====================================================

.. rubric:: Included in:

========================   ====================================

Parent                                                  Summary

========================   ====================================
:ref:`methods <methods>`       Enter the solution methods menu.

========================   ====================================

